--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "linecorp/line-bot-sdk": "^4.5"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
